// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetches Alpine lift list correctly 1`] = `
Object {
  "lifts": Array [],
}
`;

exports[`fetches Alpine trail list correctly 1`] = `
Object {
  "trails": Array [],
}
`;
